Fixed layout issues with AboutPage

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   color: red
 }
 
-.container {
+.container-style {
   background-color: whitesmoke;
   padding: 2%;
 }
